Add contributor link

--- a/api.html
+++ b/api.html
@@ -235,6 +235,7 @@ fig<span style="color: #333333">.</span>savefig(<span style="background-color: #
 												Paper</a></li>
 										<li><a href="https://github.com/wmgeolab/geoBoundaries/issues">Known Issues</a></li>
 										<li><a href="https://github.com/wmgeolab/geoBoundaries#getting-involved">Get Involved</a></li>
+										<li><a href="https://github.com/wmgeolab/geoBoundaries/graphs/contributors">We Made This</a></li>
 									</ul>
 									<br />
 									<div id="mc_embed_signup">
