--- a/index.html
+++ b/index.html
@@ -476,6 +476,7 @@ L.tileLayer(
 								Paper</a></li>
 						<li><a href="https://github.com/wmgeolab/geoBoundaries/issues">Known Issues</a></li>
 						<li><a href="https://github.com/wmgeolab/geoBoundaries#getting-involved">Get Involved</a></li>
+						<li><a href="https://github.com/wmgeolab/geoBoundaries/graphs/contributors">We Made This</a></li>
 					</ul>
 					<br />
 					<div id="mc_embed_signup">
