Fix external links

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -772,6 +772,7 @@
 	<script src="assets/js/ol.js"></script>
 	<script src="assets/js/extra.js"></script>
 
+	<script src="assets/js/internalHelpers.js"></script>
 	<script src="assets/js/internalData.js"></script>
 	<script src="assets/js/internalSpatial.js"></script>
 	<script src="assets/js/geoContrastOverview.js"></script>
